<resources>
    <string name="app_name">SHREE JAIN TRADERS</string>
    <string name="title_activity_Sales_brand">Location Brand Sales</string>
    <string name="title_activity_Sales_Category">Location Category Sales</string>
    <string name="title_activity_Profitability_Category">Category Profitability</string>
    <string name="title_activity_Profitability_Brand">Brand Profitability</string>
    <string name="title_activity_Profitability_Location">Location Profitability</string>
    <string name="title_activity_Profitability_Model">Model Profitability</string>
    <string name="export_pdf">Share</string>
    <string name="title_activity_Finance_Outstanding">Finance Outstanding</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <string name="btn_upload_picture">Upload</string>
    <string name="title_activity_Negetive_Sales">Negetive Sales</string>
    <string name="title_activity_Invoices_Sales">Todays Invoices</string>
    <string name="title_activity_Sales">Sales</string>
    <string name="title_activity_Stock">Stock</string>
    <string name="title_activity_Customer">Customer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="title_activity_Negetive_Stock">-VE Stock</string>
    <string name="title_activity_Finance_Location_Outstanding">Finance Outstanding</string>
    <string name="title_activity_Customer_Outstanding">Customer Outstanding</string>
    <string name="title_activity_Supplier_Outstanding">Supplier Outstanding</string>
    <string name="title_activity_Crm">CRM</string>
    <string name="title_activity_Purchase">Purchase</string>
    <string name="title_activity_Cagegory">Category Ageing</string>
    <string name="title_activity_Brand">Brand Ageing</string>
    <string name="title_activity_Model">Model Ageing</string>
    <string name="title_activity_invoice">Invoices</string>
    <string name="title_activity_order">Orders</string>
    <string name="title_activity_kpi">Key Performance Indicator</string>
    <string name="title_Supplier_Scheme">Supplier Scheme</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_">FullscreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="mobilelabel">"Mobile : "</string>
    <string name="emailidlabel">"Email : "</string>
    <string name="outstandinglabel">"Outstanding : "</string>
    <string name="ledgerbalancelabel">"Balance : "</string>
    <string name="priceofferredlabel">"Price Offerred : "</string>
    <string name="productenquirylabel">"Product Enquiry : "</string>
    <string name="invoicenolabel">"Invoice No : "</string>
    <string name="vinvoicedtlabel">"Invoice Date : "</string>
    <string name="netinvoiceamtlabel">"Invoice Amount : "</string>
    <string name="mrplabel">"MRP : "</string>
    <string name="modellabel">"Model : "</string>
    <string name="dplabel">"Price : "</string>
    <string name="stocklabel">"Stock"</string>
    <string name="stocklabel2">"Stock : "</string>
    <string name="product_buy">"SALE"</string>
    <string name="callbutton">"CALL"</string>
    <string name="smsbutton">"SMS"</string>
    <string name="wabutton">"WA"</string>
    <string name="emailbutton">"EMAIL"</string>
    <string name="menu_settings">Settings</string>
    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="Fragment4">This is Fragment 4</string>
    <string name="hint_sign">Get Signature</string>
    <string name="dialog_title">SIGN HERE</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_save">Save</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="title_activity_scrolling2">ScrollingActivity2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_event_manager">Event Manager</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="empty" />
    <string name="upcoming_events">Upcoming Events</string>
    <string name="user_settings">User Settings</string>
    <string name="calendar">Calendar</string>
    <string name="save_event">Save Event</string>
    <string name="event">Event</string>
    <string name="event_title">Event Title</string>
    <string name="current_date">Current Date</string>
    <string name="events">Events</string>
    <string name="ringtone">Ringtone</string>
    <string name="all_events">All Events</string>
    <string name="notification_preference">Notification Preference</string>
    <string name="_10_minutes_before">10 minutes before</string>
    <string name="_1_hour_before">1 hour before</string>
    <string name="_1_day_before">1 day before</string>
    <string name="at_the_time_of_event">At the time of event</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="note_color">Note Color</string>
    <string name="send_mail">Send mail</string>
    <string name="week">Week</string>
    <string name="next_seven_days">Next 7 days</string>
    <string name="period">Period</string>
    <string name="today">Today</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="next_30_days">Next 30 days</string>
    <string name="default_ringtone">Ringtone</string>
    <string name="default_reminder_time">Reminder Time</string>
    <string name="default_reminder_frequency">Reminder Frequency</string>
    <string name="back">BACK</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="ok">OK</string>
    <string name="dark">Dark</string>
    <string name="indigo">Indigo</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="app_theme">App Theme</string>
    <string name="consequence">Consequence</string>
    <string name="juntos">Juntos</string>
    <string name="piece_of_cake">Piece of cake</string>
    <string name="point_blank">Point blank</string>
    <string name="slow_spring_board">Slow spring board</string>
    <string name="notifications">Notifications</string>
    <string name="don_t_forget_to_buy_a_gift">Don\'t forget to buy a gift</string>
    <string name="location">Location</string>
    <string name="event_details">Event Details</string>
    <string name="add_a_location">Add a location</string>
    <string name="add_people">Add People</string>
    <string name="add">Add</string>
    <string name="add_from_contacts">Add From Contacts</string>
    <string name="add_your_notes">Add your notes</string>
    <string name="date">Date</string>
    <string name="_06_apr_2020">06-Apr-2020</string>
    <string name="time">Time</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="duration_0_hours_0_minutes">DURATION: 0 HOURS 0 MINUTES</string>
    <string name="add_event">Add Event</string>
    <string name="no_event_to_display">No event to display!</string>
    <string name="one_time_event">One-time event</string>
    <string name="add_notification">Add Notification</string>
    <string name="repetition">Repetition</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="yearly">Yearly</string>
    <string name="one_time">One-Time</string>
    <string name="default_info_title">Istanbul, Turkey</string>
    <string name="default_info_snippet">Current Location</string>
    <string name="select_this_location">Select this location</string>
    <string name="country_prompt">Choose a IP</string>
    <string name="action_add_favourite">Show List</string>
    <string name="action_play_next">Show Graph</string>
    <string name="backdrop_title">LOVE MUSICS</string>
    <string name="backdrop_subtitle">This season top 20 music</string>
    <string name="sync_account_type">com.shrikantelectronics.calender</string>
    <string name="content_authority">com.shrikantelectronics.sync_app_settings</string>
    <string name="demo_title">Maps SDK for Android Demos (Java)</string>
    <string name="no_demos">No demos</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
</resources>